--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,59 +1,84 @@
-.header {
-    border: 1px solid #707070;
-  
-    &__logo-box {
-      background: #212322;
-      width: 24.3vw;
-      height: 7rem;
-      position: relative;
-    }
-  
-    &__logo {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 11.5vw;
-    }
-  
-    &__nav-item {
-      border-right: 2px solid #e5e5e5;
-      height: 100%;
-      color: #494949;
-      text-decoration: none;
-      padding: 22px 44px;
-      font-size: 1.4rem;
-      font-weight: 600;
+.top-nav {
+  background-color: #fff;
+  border: 1px solid #e5e5e5;
+  max-width: 1920px;
+  margin: auto;
+  &_menu {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    li {
+      margin-right: 45px;
+      a {
+        text-decoration: none;
+        color: #494949;
+        font-size: 1.4rem;
+        font-weight: 600;
+      }
     }
   }
-  
-  .navbar-light .navbar-nav .active > .nav-link {
-    color: #fe5a50 !important;
-  }
-  
-  .header-btn:link,
-  .header-btn:visited {
-    color: #494949;
-    text-decoration: none;
-    padding: 14px 73px 14px 74px;
-    font-size: 1.4rem;
-    font-weight: 600;
-  }
-  
-  .header__user-btn--sign-in:link,
-  .header__user-btn--sign-in:visited {
-    color: #494949;
-    text-decoration: none;
-    font-size: 1.4rem;
-    font-weight: 600;
-  }
-  
-  .user-btn--sign-up:link,
-  .user-btn--sign-up:visited {
-    color: #fe5a50;
-    text-decoration: none;
-    font-size: 1.4rem;
-    font-weight: 600;
-    padding-left: 2.1vw !important;
-    padding-right: 3.4vw !important;
-  }
+}
+
+.logo {
+  background-color: #000;
+}
+// .header {
+//     border: 1px solid #707070;
+
+//     &__logo-box {
+//       background: #212322;
+//       width: 24.3vw;
+//       height: 7rem;
+//       position: relative;
+//     }
+
+//     &__logo {
+//       position: absolute;
+//       top: 50%;
+//       left: 50%;
+//       transform: translate(-50%, -50%);
+//       width: 11.5vw;
+//     }
+
+//     &__nav-item {
+//       border-right: 2px solid #e5e5e5;
+//       height: 100%;
+//       color: #494949;
+//       text-decoration: none;
+//       padding: 22px 44px;
+//       font-size: 1.4rem;
+//       font-weight: 600;
+//     }
+//   }
+
+//   .navbar-light .navbar-nav .active > .nav-link {
+//     color: #fe5a50 !important;
+//   }
+
+//   .header-btn:link,
+//   .header-btn:visited {
+//     color: #494949;
+//     text-decoration: none;
+//     padding: 14px 73px 14px 74px;
+//     font-size: 1.4rem;
+//     font-weight: 600;
+//   }
+
+//   .header__user-btn--sign-in:link,
+//   .header__user-btn--sign-in:visited {
+//     color: #494949;
+//     text-decoration: none;
+//     font-size: 1.4rem;
+//     font-weight: 600;
+//   }
+
+//   .user-btn--sign-up:link,
+//   .user-btn--sign-up:visited {
+//     color: #fe5a50;
+//     text-decoration: none;
+//     font-size: 1.4rem;
+//     font-weight: 600;
+//     padding-left: 2.1vw !important;
+//     padding-right: 3.4vw !important;
+//   }
