--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,28 +5,51 @@
 //   padding: 0;
 //   box-sizing: inherit;
 // }
-@import "abstracts/variables";
-@import "base/typography";
-@import "layout/header";
-@import "layout/footer";
-@import "components/icon";
-@import "components/black-icon";
-@import "components/get-started-form";
+@import 'abstracts/variables';
+@import 'base/typography';
+@import 'layout/header';
+@import 'layout/footer';
+@import 'components/icon';
+@import 'components/black-icon';
+@import 'components/get-started-form';
 
 //PAGES
-@import "pages/landingPage1";
+@import 'pages/landingPage1';
+
+$max-screen-width: 1920px;
 
 html {
-    /* font-size: 10px; */
-    font-size: 62.5%;
+  /* font-size: 10px; */
+  font-size: 62.5%;
 }
 
 body {
-    background: #f5f5f5;
+  background: #f5f5f5;
 }
 
 .heading {
-    margin-top: 7rem;
+  margin-top: 7rem;
+  &__header {
+    font-size: 48px;
+    font-weight: 600;
+    @media (max-width: 1680px) {
+      font-size: 36px;
+    }
+    @media (max-width: 1024px) {
+      font-size: 26px;
+    }
+  }
+  &__text {
+    margin-top: 4rem;
+    font-size: 24px;
+    text-align: center;
+    @media (max-width: 1680px) {
+      font-size: 18px;
+    }
+    @media (max-width: 1024px) {
+      font-size: 14px;
+    }
+  }
 }
 
 // .content-block {
@@ -109,204 +132,226 @@ body {
 //   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 // }
 .benefits-block {
-    width: 80.1vw;
-    margin: 105.5px auto 0;
+  width: 80.1vw;
+  margin: 105.5px auto 0;
 }
 
 .benefits-block__heading {
-    text-align: center;
-    font-size: 68px;
-    font-weight: 600;
+  text-align: center;
+  font-size: 68px;
+  font-weight: 600;
 }
 
 .benefits-block__cards {
-    margin-top: 116.37px;
+  margin-top: 116.37px;
 }
 
 .benefits-block__cards-item {
-    margin-top: 61px;
-    height: 40vh;
-    width: 23.4vw;
-    box-shadow: 0px 45px 165px #00000026;
-    position: relative;
-    border-radius: 22px;
-    margin-right: 5.4vw;
-    padding-left: 2.5vw;
+  margin-top: 61px;
+  height: 40vh;
+  width: 23.4vw;
+  box-shadow: 0px 45px 165px #00000026;
+  position: relative;
+  border-radius: 22px;
+  margin-right: 5.4vw;
+  padding-left: 2.5vw;
 }
 
 .benefits-block__icon-position {
-    position: absolute;
-    top: -6vh;
-    left: 2.5vw;
+  position: absolute;
+  top: -6vh;
+  left: 2.5vw;
 }
 
 .cards-block-text-box__link-content:link,
 .cards-block-text-box__link-content:visited {
-    text-decoration: none;
-    color: #fe5a50;
-    font-weight: 600;
-    font-size: 1.01vw;
-    margin-bottom: 3.8vh;
-    padding-right: 1vw;
+  text-decoration: none;
+  color: #fe5a50;
+  font-weight: 600;
+  font-size: 1.01vw;
+  margin-bottom: 3.8vh;
+  padding-right: 1vw;
 }
 
 .image-block {
-
-    background-image: url('../img/Mountains.png');
-    background-size: cover;
-    background-position: top;
-    height: 43.3vh;
-    width: 100%;
-    background-color: #212322;
-    margin-top: 103px;
-
-  background-image: url("../img/Mountains.png");
+  background-image: url('../img/Mountains.png');
   background-size: cover;
   background-position: top;
-  height: 43.3vh;
+  //height: 43.3vh;
   width: 100%;
   background-color: #212322;
   margin-top: 103px;
 
+  background-image: url('../img/Mountains.png');
+  background-size: cover;
+  background-position: top;
+  // height: 43.3vh;
+  width: 100%;
+  background-color: #212322;
+  margin-top: 103px;
 }
 
 .image-block__main {
-    height: 100%;
+  height: 100%;
 }
 
 .image-block__text {
-    color: #fff;
-    font-size: 1.15vw;
-    line-height: 32px;
-    width: 49vw;
+  color: #fff;
+  font-size: 18px;
+  line-height: 32px;
+  //width: 400px;
+
+  @media (max-width: 1680px) {
+    font-size: 12px;
+  }
+  @media (max-width: 1024px) {
+    font-size: 10px;
+  }
 }
 
 .image-block__author {
-    color: #fff;
-    font-size: 0.9vw;
-    line-height: 21, 6px;
-    text-align: center;
-    padding-top: 22px;
+  color: #fff;
+  //font-size: 0.9vw;
+  line-height: 21, 6px;
+  text-align: center;
+  padding-top: 22px;
 }
 
 .dots-block {
-    padding-top: 7vh;
+  // padding-top: 7vh;
 }
 
 .dot {
-    width: 0.8vw;
-    height: 0.8vw;
-    border-radius: 100%;
-    background: #fff;
-    margin-right: 17.3px;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+  background: #fff;
+  margin-right: 17.3px;
 }
 
 .dot-not-active {
-    width: 0.8vw;
-    height: 0.8vw;
-    border-radius: 100%;
-    background: #fff;
-    opacity: 40%;
-    margin-right: 17.3px;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+  background: #fff;
+  opacity: 40%;
+  margin-right: 17.3px;
 }
-
 
 /*-----------------------------------------------------------*/
 
 .safe-data-block {
-    margin-top: 91.6px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 74vw;
+  margin-top: 91.6px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 74vw;
 }
 
 .icons-list-block-item {
-    margin-bottom: 81.4px;
+  margin-bottom: 81.4px;
 }
 
 .black-icon1 {
-    display: inline-block;
+  display: inline-block;
 }
 
 .describe-position {
-    margin-left: 3.2vw;
+  margin-left: 3.2vw;
 }
 
 .icons-list-block-item-text {
-    font-size: 19.9px;
-    line-height: 30px;
-    color: #9da6ac;
-    margin-left: 3px;
-    width: 360.65px;
+  font-size: 19.9px;
+  line-height: 30px;
+  color: #9da6ac;
+  margin-left: 3px;
+  width: 360.65px;
 }
 
 .icons-list-block-item {
-    width: 28.6vw;
+  width: 28.6vw;
 }
 
 .company-data-block {
-    margin-left: 4.3vw;
-    margin-top: 3.5vh;
+  margin-left: 4.3vw;
+  margin-top: 3.5vh;
 }
 
 .company-data-block-haeder {
-    line-height: 7vh;
+  line-height: 7vh;
 }
 
 .company-data-block-text {
-    margin-top: 50px;
-    width: 607px;
-    line-height: 3vh;
-    color: #9da6ac;
+  margin-top: 50px;
+  width: 607px;
+  line-height: 3vh;
+  color: #9da6ac;
 }
 
 .sign-up-block {
-    margin: 0 auto 0;
-    width: 81vw;
-}
-
-.sign-up-block-content {
-    width: 81vw;
-    height: 37vh;
+  margin: 0 auto 0;
+  max-width: $max-screen-width;
+  &__content {
+    //   width: 81vw;
+    //   height: 37vh;
     background-color: #fe5a50;
     border-radius: 22px;
     position: relative;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1%;
+    padding: 2%;
+  }
+  margin-bottom: 1%;
 }
 
 .sign-up-block-header {
-    font-size: 2.5vw;
-    font-weight: 600;
-    line-height: 4.8vh;
-    letter-spacing: 1px;
-    color: #fff;
-    text-align: center;
-    margin-top: 7vh;
+  font-size: 48px;
+  font-weight: 600;
+  // line-height: 4.8vh;
+  letter-spacing: 1px;
+  color: #fff;
+  text-align: center;
+  //   margin-top: 2rem;
+  //   padding-top: 2rem;
+  @media (max-width: 1680px) {
+    font-size: 36px;
+  }
+  @media (max-width: 1024px) {
+    font-size: 26px;
+  }
 }
 
 .sign-up-block-text {
-    font-size: 1.04vw;
-    color: #fff;
-    width: 41vw;
-    line-height: 31.33px;
-    letter-spacing: 0.9px;
-    margin-top: 16.1px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+  font-size: 20px;
+  color: #fff;
+  // width: 41vw;
+  //   line-height: 31.33px;
+  letter-spacing: 0.9px;
+  margin-top: 16.1px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  @media (max-width: 1680px) {
+    font-size: 16px;
+  }
+  @media (max-width: 1024px) {
+    font-size: 14px;
+  }
 }
 
 .btn-block {
-    text-align: center;
-    // padding-top: 33px;
+  text-align: center;
+  // padding-top: 33px;
 }
 
 .btn-white-safe {
-    background-color: #f1f1f1;
-    text-transform: uppercase;
-    border-radius: 10px !important;
-    padding: 1.6vh 3.1vw !important;
-    color: #585b60;
-    font-size: 14px;
-    font-weight: 800;
-    box-shadow: 0 0.5rem 1rem #ffd6d3;
+  background-color: #f1f1f1;
+  text-transform: uppercase;
+  border-radius: 10px !important;
+  padding: 1rem 5rem !important;
+  color: #585b60;
+  font-size: 14px;
+  font-weight: 800;
+  box-shadow: 0 0.5rem 1rem #ffd6d3;
 }
