--- a/sass/components/_black-icon.scss
+++ b/sass/components/_black-icon.scss
@@ -1,12 +1,69 @@
-@import "../mixins/icon-color";
-.black-icon {
-    @include icon-color($color-black);
-    border-radius: 15px;
-    width: 6.5vw;
-    height: 6.5vw;
-    box-shadow: 0px 8px 25px #21232266;
-    &__image {
-        width: 3.4vw;
-        height: 3.4vw;
-    }
-}
+        @import "../mixins/icon-color";
+        .black-icon {
+            @include icon-color($color-black);
+            border-radius: 15px;
+            width: 125px !important;
+            height: 125px;
+            box-shadow: 0px 8px 25px #21232266;
+            margin-bottom: 20%;
+            @media (max-width: 1680px) {
+                width: 100px !important;
+                height: 100px;
+            }
+            @media (max-width: 1440px) {
+                width: 75px !important;
+                height: 75px;
+            }
+            // @media (max-width: 1024px) {
+            //     width: 50px;
+            //     height: 50px;
+            // }
+            &__image {
+                width: 67px;
+                height: 81px;
+                @media (max-width: 1680px) {
+                    width: 57px;
+                    height: 71px;
+                }
+                @media (max-width: 1440px) {
+                    width: 47px;
+                    height: 61px;
+                }
+                // @media (max-width: 1024px) {
+                //     width: 37px;
+                //     height: 51px;
+                // }
+            }
+            &__image-zig-zag {
+                width: 74px;
+                height: 74px;
+                @media (max-width: 1680px) {
+                    width: 64px;
+                    height: 64px;
+                }
+                @media (max-width: 1440px) {
+                    width: 54px;
+                    height: 54px;
+                }
+                // @media (max-width: 1024px) {
+                //     width: 44px;
+                //     height: 44px;
+                // }
+            }
+            &__image-shield {
+                width: 65px;
+                height: 65px;
+                @media (max-width: 1680px) {
+                    width: 55px;
+                    height: 55px;
+                }
+                @media (max-width: 1440px) {
+                    width: 45px;
+                    height: 45px;
+                }
+                // @media (max-width: 1024px) {
+                //     width: 35px;
+                //     height: 35px;
+                // }
+            }
+        }
