--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,52 +1,51 @@
 $max-screen-width: 1920px;
-
 .top-nav {
-  background-color: #fff;
-  border: 1px solid #e5e5e5;
-  max-width: $max-screen-width;
-  margin: auto;
-  &_menu {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    .nav-item {
-      border-right: 2px solid #e5e5e5;
-      height: 100%;
-      a {
+    background-color: #fff;
+    border: 1px solid #e5e5e5;
+    max-width: $max-screen-width;
+    // margin: auto;
+    &_menu {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        .nav-item {
+            border-right: 2px solid #e5e5e5;
+            height: 100%;
+            a {
+                text-decoration: none;
+                color: #494949;
+                font-size: 1.4rem;
+                font-weight: 600;
+                padding: 15px 25px;
+            }
+        }
+        li {
+            a {
+                text-decoration: none;
+                color: #494949;
+                font-size: 1.6rem;
+                font-weight: 600;
+                margin-right: 45px;
+            }
+        }
+    }
+}
+
+.nav-item {
+    border-right: 2px solid #e5e5e5;
+    height: 100%;
+    a {
         text-decoration: none;
         color: #494949;
         font-size: 1.4rem;
         font-weight: 600;
-        padding: 15px 25px;
-      }
     }
-    li {
-      a {
-        text-decoration: none;
-        color: #494949;
-        font-size: 1.6rem;
-        font-weight: 600;
-        margin-right: 45px;
-      }
-    }
-  }
-}
-
-.nav-item {
-  border-right: 2px solid #e5e5e5;
-  height: 100%;
-  a {
-    text-decoration: none;
-    color: #494949;
-    font-size: 1.4rem;
-    font-weight: 600;
-  }
 }
 
 .logo {
-  background-color: #000;
-  padding: 15px 20px;
+    background-color: #000;
+    padding: 15px 20px;
 }
 
 // .header {
