--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,21 +1,23 @@
-body {
-  font-family: 'Montserrat', sans-serif !important;
+body,
+html {
+    font-size: 62.5%;
+    font-family: 'Montserrat', sans-serif !important;
 }
 
 .heading-primary {
-  font-size: 3.49vw;
-  font-weight: 600;
-  line-height: 46px;
+    font-size: 3.49vw;
+    font-weight: 600;
+    line-height: 46px;
 }
 
 .sub-heading-primary {
-  font-size: 1.03vw;
-  font-weight: 600;
-  color: #585b60;
+    font-size: 1.03vw;
+    font-weight: 600;
+    color: #585b60;
 }
 
 .text {
-  // font-size: 1.03vw;
-  color: #585b60;
-  text-align: center;
+    // font-size: 1.03vw;
+    color: #585b60;
+    text-align: center;
 }
