--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 $max-screen-width: 1920px;
 .top-nav {
     background-color: #fff;
-    border: 1px solid #e5e5e5;
+    // border: 1px solid #e5e5e5;
     max-width: $max-screen-width;
     // margin: auto;
     &_menu {
@@ -10,7 +10,8 @@ $max-screen-width: 1920px;
         margin: 0;
         display: flex;
         .nav-item {
-            border-right: 2px solid #e5e5e5;
+            border-right: 1px solid #e5e5e5;
+            border-bottom: 1px solid #e5e5e5;
             height: 100%;
             a {
                 text-decoration: none;
@@ -32,15 +33,8 @@ $max-screen-width: 1920px;
     }
 }
 
-.nav-item {
-    border-right: 2px solid #e5e5e5;
-    height: 100%;
-    a {
-        text-decoration: none;
-        color: #494949;
-        font-size: 1.4rem;
-        font-weight: 600;
-    }
+.nav-item-sign {
+    border-bottom: 1px solid #e5e5e5 !important;
 }
 
 .logo {
