--- a/sass/components/_get-started-form.scss
+++ b/sass/components/_get-started-form.scss
@@ -1,33 +1,53 @@
 .get-started-form {
-  text-align: center;
-  margin-top: 1rem;
+    text-align: center;
+    margin-top: 1rem;
 }
 
 .get-started__input {
-  height: 40px !important;
-  width: 180px !important;
-  font-size: 14px !important;
-  font-weight: 600 !important;
-  color: #c2c9db !important;
-  border-radius: 8px 0 0 8px !important;
-  background: #ffffff 0% 0% no-repeat padding-box !important;
-  box-shadow: 0px 35px 55px #0000000f !important;
-  border: 1px solid #e5e5e5 !important;
-}
-
-.get-started__input::placeholder {
-  color: #c2c9db !important;
+    height: 6.4rem !important;
+    width: 28rem !important;
+    font-size: 1.8rem !important;
+    font-weight: 600 !important;
+    color: #000 !important;
+    border-radius: 8px 0 0 8px !important;
+    background: #ffffff 0% 0% no-repeat padding-box !important;
+    box-shadow: 10px 35px 55px #0000000f !important;
+    border: 1px solid #e5e5e5 !important;
+    &::placeholder {
+        color: #c2c9db !important;
+    }
+    @media(max-width: 992px) {
+        width: 15rem!important;
+        height: 4rem !important;
+        font-size: 1.2rem !important;
+    }
 }
 
 .get-started__btn {
-  background-color: #fe5a50 !important;
-  color: #fff !important;
-  border-radius: 0 8px 8px 0 !important;
-  // font-size: 1vw !important;
-  font-weight: 600 !important;
-  border: none !important;
-  background: #fe5a50 0% 0% no-repeat padding-box !important;
-  box-shadow: 0px 8px 25px #fe5a506b !important;
-  width: 100px !important;
-  height: 40px;
+    color: #fff !important;
+    border-radius: 0 8px 8px 0 !important;
+    font-size: 1.8rem !important;
+    font-weight: 600 !important;
+    border: none !important;
+    background: #fe5a50 0% 0% no-repeat padding-box !important;
+    box-shadow: 0px 8px 25px #FE5A506B !important;
+    width: 23rem !important;
+    height: 6.4rem;
+    @media(max-width: 992px) {
+        width: 15rem!important;
+        height: 4rem;
+        font-size: 1.2rem !important;
+    }
+    &:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 0.5rem 1rem #FE5A506B;
+        &::after {
+            transform: scaleX(1.5) scaleY(1.6);
+            opacity: 0;
+        }
+    }
+    &:active {
+        transform: translateY(-1px);
+        box-shadow: 0 0.5rem 1rem #FE5A506B;
+    }
 }
