--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,3 @@
-// *,
-// *::after,
-// *::before {
-//   margin: 0;
-//   padding: 0;
-//   box-sizing: inherit;
-// }
 @import 'abstracts/variables';
 @import 'base/typography';
 @import 'layout/header';
@@ -27,107 +20,22 @@ body {
 .heading {
     margin-top: 7rem;
     &__header {
-        font-size: 48px;
+        font-size: 6.8rem;
         font-weight: 600;
-        @media (max-width: 1680px) {
-            font-size: 36px;
-        }
-        @media (max-width: 1024px) {
-            font-size: 26px;
+        @media (max-width: 992px) {
+            font-size: 3.4rem;
         }
     }
     &__text {
         margin-top: 4rem;
-        font-size: 24px;
+        font-size: 2rem;
         text-align: center;
-        @media (max-width: 1680px) {
-            font-size: 18px;
-        }
-        @media (max-width: 1024px) {
-            font-size: 14px;
+        @media (max-width: 992px) {
+            font-size: 1.6rem;
         }
     }
 }
 
-// .content-block {
-//   max-width: 800px;
-//   margin: auto;
-// }
-// .image-container {
-//   width: 40%;
-// }
-// .heading__primary {
-//   font-size: 3.5vw;
-//   font-weight: 600;
-//   line-height: 46px;
-// }
-// .heading__text-block {
-//   margin-top: 14px;
-//   text-align: center;
-// }
-// .information-block-1 {
-//   /* display: flex;
-//   justify-content: center; */
-//   margin-top: 91.6px;
-//   margin-left: auto;
-//   margin-right: auto;
-//   width: 87vw;
-// }
-// .top-image {
-//   width: 50vw;
-// }
-// .browser-image {
-//   width: 50vw;
-// }
-// .information-block-1__list {
-//   margin-left: 5.4vw;
-// }
-// .information-block-1__header {
-//   font-size: 2.5vw;
-//   font-weight: 600;
-//   margin-bottom: 30px;
-// }
-// .information-block-1__list-item {
-//   margin-left: 2.08vw;
-//   display: flex;
-//   align-items: center;
-//   margin-bottom: 49px;
-// }
-// .information-block-1__list-item-text {
-//   font-size: 15px;
-//   padding-left: 22px;
-// }
-// .information-block-1__list-item--dashboard {
-//   font-weight: 600;
-//   margin-left: 2.08vw;
-//   margin-bottom: 17px;
-//   font-size: 24px;
-//   color: #fe5a50;
-// }
-// .dashboard-btn-block {
-//   margin-left: 3.49vw;
-// }
-// .dashboard-btn:link,
-// .dashboard-btn:visited {
-//   text-transform: uppercase;
-//   text-decoration: none;
-//   padding: 5px 30px 5px 20px;
-//   display: inline-block;
-//   border-radius: 5px;
-//   transition: all 0.2s;
-//   position: relative;
-//   font-size: 0.6vw;
-//   background-color: #fe5a50;
-//   color: #fff;
-// }
-// .dashboard-btn:hover {
-//   transform: translateY(-3px);
-//   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
-// }
-// .dashboard-btn:active {
-//   transform: translateY(-1px);
-//   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-// }
 .benefits-block {
     width: 80.1vw;
     margin: 105.5px auto 0;
@@ -275,7 +183,8 @@ body {
         color: #212322;
         font-weight: 600;
         font-size: 22px;
-        a {
+        a:link,
+        a:visited {
             color: #212322;
             text-decoration: none;
         }
@@ -302,7 +211,7 @@ body {
 }
 
 .sign-up-block-header {
-    font-size: 48px;
+    font-size: 4.8rem;
     font-weight: 600;
     // line-height: 4.8vh;
     letter-spacing: 1px;
@@ -314,25 +223,26 @@ body {
     //     font-size: 36px;
     // }
     @media (max-width: 992px) {
-        font-size: 26px;
+        font-size: 3rem;
     }
 }
 
 .sign-up-block-text {
-    font-size: 20px;
+    font-size: 2rem;
     color: #fff;
-    // width: 41vw;
+    max-width: 7.9rem;
     //   line-height: 31.33px;
     letter-spacing: 0.9px;
     margin-top: 16.1px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 2%;
     text-align: center;
     // @media (max-width: 1680px) {
     //     font-size: 16px;
     // }
     @media (max-width: 992px) {
-        font-size: 14px;
+        font-size: 1.6rem;
     }
 }
 
@@ -342,12 +252,11 @@ body {
 }
 
 .btn-white-safe {
-    background-color: #f1f1f1;
+    background-color: #f1f1f1 !important;
     text-transform: uppercase;
     border-radius: 10px !important;
-    padding: 1rem 5rem !important;
-    color: #585b60;
-    font-size: 14px;
-    font-weight: 800;
-    box-shadow: 0 0.5rem 1rem #ffd6d3;
+    padding: 1.6rem 6rem !important;
+    color: #585b60 !important;
+    font-size: 1.4rem !important;
+    font-weight: 800 !important;
 }
