--- a/sass/main.scss
+++ b/sass/main.scss
@@ -265,6 +265,7 @@ body {
 display: flex;
 flex-direction: column;
 height: 463px;
+margin: 0 2em;
 }
 .icon-benefits {
 max-width: 150px;
@@ -284,8 +285,8 @@ justify-content: flex-end;
 margin-top: 62.5px;
 background-color: white;
 border-radius: 25px;
-padding: 7em 2em 2em 2.5em;
-min-height: 278px;
+padding: 9em 2em 2em 2.5em;
+min-height: 298px;
 }
 .text-container p {
 display: inline-block;
