--- a/sass/components/_get-started-form.scss
+++ b/sass/components/_get-started-form.scss
@@ -1,6 +1,9 @@
 .get-started-form {
     text-align: center;
-    margin-top: 1rem;
+    margin-top: 1.4rem;
+    @media (max-width: 992px) {
+        margin-top: calc(1.4rem/1.9);
+    }
 }
 
 .get-started__input {
