--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,8 +8,11 @@ $max-screen-width: 1920px;
         padding: 0;
         margin: 0;
         display: flex;
+        .dropdown-item:active {
+            background-color: #fff;
+        }
         .active {
-            color: #FE5A50
+            color: #FE5A50;
         }
         .nav-item {
             border-right: 1px solid #e5e5e5;
@@ -40,6 +43,7 @@ $max-screen-width: 1920px;
 
 .nav-item-sign {
     border-bottom: 1px solid #e5e5e5 !important;
+    border-right: 1px solid #e5e5e5 !important;
 }
 
 .logo {
